src/test/ui/resolve/issue-23305.stderr
error[E0391]: cycle detected when processing `<impl at $DIR/issue-23305.rs:5:1: 5:20>`
  --> $DIR/issue-23305.rs:5:12
   |
LL | impl ToNbt<Self> {}
   |            ^^^^
   |
   = note: ...which again requires processing `<impl at $DIR/issue-23305.rs:5:1: 5:20>`, completing the cycle

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
